--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ Our research work falls under the broad headers listed below:
 </center>
 	(Left) In order to analyze the high temperature gas phase oxidation of PMMA, and thereby predict its fire behaviour with less computational effort, a compact kinetic model for the oxidation of its primary decomposition product, MMA, is most essential. A compact reaction model, consisting of 88 species and 1092 reactions is developed to describe the oxidation of MMA and validated against fundamental experimental datasets obtained in premixed flames.
 <br><br>	
-	(Right) Blending small amounts of dimethylether (DME) with diesel increases its resistance to extinction. A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME. In addition to the extinction data, the short mechanism accurately reproduces the available experimental data in the literature. 
+	(Right) Blending small amounts of dimethylether (DME) with diesel is found to increase its resistance to extinction. In order to critically evaluate the overall combustion behaviour of DME via numerical simulations, a short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed. In addition to the extinction data, the short mechanism accurately reproduces the available experimental data in the literature. 
 	
 <tr>
 <td>
@@ -569,7 +569,7 @@ Our research work falls under the broad headers listed below:
 	
 	(Left) An accurate, fast, direct and robust algorithm to compute multi-component diffusion velocities has been proposed. To our knowledge, this is the first provably accurate algorithm scaling at a computational complexity of O(N) in finite precision. 
 	<br><br>
-	(Right) A flexible and evolutive component library framework has been proposed to derive short chemical mechanisms with only the necessary kinetics for the desired surrogate mixture. A script to extract a chemical mechanism for a surrogate mixture, the kinetics of whose individual components are described in this parent chemical mechanism, is available. </p> 
+	(Right) A flexible and evolutive component library framework has been proposed to derive short chemical mechanisms with only the necessary kinetics for the desired surrogate mixture. A script to extract a chemical mechanism for a surrogate mixture, the kinetics of whose individual components are described in this parent chemical mechanism, is available.
 </td>
 </tr>
 
@@ -671,16 +671,27 @@ While methylbutanoate is a saturated ester, the real biodiesel also contains a s
 
 <div>
 	
-	<h2 id="kinetics_conventional">Kinetics of conventional surrogates </h2>
+	<h2 id="kinetics_conventional">Kinetics of conventional transportation fuel surrogates </h2>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
-	<ul><li>	
-<h3>Kinetics of conventional fuel surrogate components: </h3> 
-
-Coming up soon ...
-	
+	<ul>
+<li>	
+<h3>Kinetics of n-dodecane: </h3> 
+Coming up soon ...	
 </li>
+
+<li>	
+<h3>Kinetics of methylcyclohexane: </h3> 
+Coming up soon ...	
+</li>
+
+<li>	
+<h3>Kinetics of aromatics: </h3> 
+Coming up soon ...	
+</li>
+
+
 </ul>
 </td>
 </tr>
@@ -695,6 +706,7 @@ Coming up soon ...
 <tr>
 <td>
 	<ul><li>	
+		<h3>Simulation driven surrogate formulation</h3>
 Coming up soon ...
 
 
@@ -769,9 +781,7 @@ Currently, ideas to improve existing methods in order to to achieve reduced comp
 			
 		<li>
 			<h3>Fast computation of multi-component diffusion velocities:</h3>
-			.
-			.
-			.
+			Coming up soon ...
 		</li>
 		
 		<li>	
