--- a/index.html
+++ b/index.html
@@ -982,6 +982,7 @@ View research  <a href="#mech_opt" onclick="openCity(event, 'Current_Research')"
 
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 <div id="Publications" class="tabcontent">
+	<center><img src="./images/logo.png" width="800">
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
@@ -1290,6 +1291,7 @@ All mechanism are made available and have been validated as discussed in the jou
 
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 <div id="Available_Projects" class="tabcontent">
+	<center><img src="./images/logo.png" width="800"></center>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
