--- a/index.html
+++ b/index.html
@@ -459,9 +459,7 @@ Our research work falls under the broad headers listed below:
 
 <!--</br> </br> <i>If you are interested in being a part of our team, peruse the list of <a href="#" onclick="openCity(event, 'Available_Projects')"> available projects</a> to identify your interests and write to me with a subject line that includes the title of the topic. Please note that I am *not* interested in hiring interns.</i> -->
 
-<td width="25%">
-	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
-</td>
+
 </tr>
 </table>
 
@@ -856,6 +854,16 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 		
 <br><br>
 <table border="1" cellspacing="1" cellpadding="5" width="100%"> <tr><td>
+
+<table border="0" cellspacing="1" cellpadding="5" width="100%">
+
+<tr>
+	<td width="25%">
+		<center><img src="./images/krithika.png" width="170">	
+				 <h4>Krithika Narayanaswamy</h4></center>
+	</td>
+</tr>
+</table>
 	
 <table border="0" cellspacing="1" cellpadding="5" width="100%">
 	<center><p class=small>Research Scholars</p></center>
@@ -941,7 +949,6 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 </tr>
 </table>
 
-<br><br>
 <br><br>
 	<center><p class=small>Alumni</p></center>
 <table border="0" cellspacing="1" cellpadding="5" width="100%">
