--- a/index.html
+++ b/index.html
@@ -461,9 +461,7 @@ Our research work falls under the broad headers listed below:
 
 
 </tr>
-</table>
 
-<table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
 	<center>
@@ -779,6 +777,11 @@ Currently, ideas to improve existing methods in order to to achieve reduced comp
 		
 	<h4>Contributor: <a href="#people-sanjay" onclick="openCity(event, 'People')"> M. C. Sanjay </a></h4>
 			
+		</li>
+		
+		<li>
+			<h3>Component Library approach:</h3>
+			Coming up soon ...
 		</li>
 			
 		<li>
