--- a/index.html
+++ b/index.html
@@ -598,7 +598,8 @@ Our research work falls under the broad headers listed below:
 			Evaluating the model against these data sets point to the need to revise the kinetic model, which is achieved by adopting rate constants of key reactions from recent literature for analogous molecules. The updated compact kinetic model is able to predict the major species in the flat flame as well the burning velocity of MMA satisfactorily. The final `short MMA mechanism' consists of 88 species and 1092 reactions. 
 	<br>
 	<br>
-	<h4>Contributor: <a href="#people-shan" onclick="openCity(event, 'People')"> Shanmugasundaram D.</a></h4>
+	<h4>Contributor: <a href="#people-shan" onclick="openCity(event, 'People')"> Shanmugasundaram D.</a><br>
+	Publication(s): <a href="#publ-mma" onclick="openCity(event, 'Publications')"> Dakshnamurthy et al., CST 2018</a></h4>
 	<br><br>
 	</li>
 	</ul>
@@ -617,14 +618,18 @@ Our research work falls under the broad headers listed below:
 	<figcaption> Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E (presented at the 10th U.S. National Combustion Meeting, 2017)  </figcaption> </figure> -->
  
 	<br><br> <center><img src="./current_research/oxygenates_rohit/23spec_14step_results.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
-	In order to critically evaluate the overall combustion behaviour of DME via numerical simulations, an accurate as well as compact kinetic mechanism to describe its oxidation is most essential. A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. The short mechanism accurately reproduces the available experimental data for ignition delays, laminar flame speeds, and species profiles in flow reactors as well as jet-stirred reactors. 
+	In order to critically evaluate the overall combustion behaviour of DME via numerical simulations, an accurate as well as compact kinetic mechanism to describe its oxidation is most essential. A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. In the model development, a "bottom-up approach" is adopted to incorporate just the necessary kinetics to describe the combustion characteristics with good fidelity. The short mechanism accurately reproduces the available experimental data for ignition delays, laminar flame speeds, and species profiles in flow reactors as well as jet-stirred reactors. 
 	</br> </br>
 	To assess the validity of this reaction mechanism in non-premixed systems, extinction strain rates of  DME-air mixtures, which are not available in the literature, are measured in a counter-flow diffusion flame burner. Details on the experimental set up can be found <a href=https://www.dropbox.com/s/r92rqrpryb71g3j/CFDF_Burner.pdf?dl=0" target="_blank"> here</a>.
 	</br> </br>
 	The 23-species reaction mechanism is able to predict the experimental data for extinction within the uncertainty limits. This mechanism is further reduced by introducing quasi-steady state assumptions for six intermediate species to finally obtain a 14-step global kinetic scheme. A code is developed in MATLAB to obtain these 14 global steps and their corresponding rate expressions in terms of the elementary reaction rates. The 14-step mechanism performs as good as the 23-species mechanism for all the experimental data sets tested for.
-	</br>
+	<br>
+	<br>
+	Extending the bottom-up approach proposed to derive the DME mechanism to other fuels is one of our near term objectives. 
 
-	<h4>Contributor: <a href="#people-rohit" onclick="openCity(event, 'People')"> Rohit Sanjay Khare</a></h4>
+	<h4>Contributor: <a href="#people-rohit" onclick="openCity(event, 'People')"> Rohit Sanjay Khare</a><br>
+	Publication(s): <a href="#publ-dme1" onclick="openCity(event, 'Publications')"> Khare et al., CNF 2018</a>
+    </h4>
 	<br><br>
 	</li> </ul>
 	
@@ -658,10 +663,11 @@ One of our recent interests concerns with developing a kinetic scheme for a smal
 <!-- One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on newer experimental measurements and theoretical rate constant calculations, and comprehensively assessed for its component kinetic description.  The revised kinetic model has been validated comprehensively against a wide range of experimental data along with ignition delays at intermediate temperatures measured in an RCM at PTB, Germany. The effect of addition of low-temperature chemistry pathways to the methyl butanoate chemical kinetic mechanism has also been explored. A surrogate has been defined using a novel approach to represent a target biodiesel fuel. This surrogate has been employed in engine simulations and comparisons have been made for major combustion characteristics obtained using computations and experiments performed using a biodiesel powered CI engine. -->
 </br>
 
-While methylbutanoate is a saturated ester, the real biodiesel also contains a significant degree of unsaturation (depending on the source of the oil), which results in considerable differences in combustion characteristics, such as in ignition delay times. In this work, the importance of including an unsaturated molecule in the biodiesel surrogate will be investigated. <br><br>	
+While methylbutanoate is a saturated ester, the real biodiesel also contains a significant degree of unsaturation (depending on the source of the oil), which results in considerable differences in combustion characteristics, such as in ignition delay times. The importance of including an unsaturated molecule in the biodiesel surrogate needs to be investigated. <br><br>	
 	A kinetic scheme is being developed for methyl crotonoate, which is a simple unsaturated ester, that is representative of the long chain unsaturated esters in the real biodiesel. To validate the kinetic model, experimental data at intermediate temperatures for ignition delays measured in an RCM and species profiles in a JSR will be utilized, in addition to the experimental data available at high temperatures. Besides ascertaining the importance of including an unsaturated ester constituent in biodiesel surrogates, the reaction scheme proposed and the rate constants used therein will act as a basis to build reaction mechanisms for longer chain unsaturated esters, which are less understood presently. 
 	
-	<h4>Contributors: <a href="#people-aditya" onclick="openCity(event, 'People')"> Aditya D. Lele</a>, <a href="#people-praise" onclick="openCity(event, 'People')"> Praise Noah Johnson</a></h4> 
+	<h4>Contributors: <a href="#people-aditya" onclick="openCity(event, 'People')"> Aditya D. Lele</a>, <a href="#people-praise" onclick="openCity(event, 'People')"> Praise Noah Johnson</a><br> 
+		Publication(s): <a href="#publ-mb1" onclick="openCity(event, 'Publications')"> Lele et al., CNF 2018</a></h4>
 </li>
 </ul>
 </td>
@@ -728,7 +734,7 @@ Coming up soon ...
 	<ul><li>	
 <h3>Reaction mechanism optimization:</h3>
  <center><img src="./current_research/optimization_vaisakh/framework.jpg"  style="float: right; width: 44%; margin-left: 2%; margin-right: 1%; margin-bottom: 0.5em;"> </center> 
-In this study, a framework for reaction mechanism optimization is developed and the idea has been implemented as a black box tool. This tool requires target information and uncertainty of rate constants as inputs. This modular Python script uses FlameMaster (Pitsch, H. FlameMaster v3.3.10) for kinetics simulations and NLopt for minimization of objective function. 
+A framework for reaction mechanism optimization has been developed and the idea has been implemented as a black box tool. This tool requires target information and uncertainty of rate constants as inputs. This modular Python script uses FlameMaster (Pitsch, H. FlameMaster v3.3.10) for kinetics simulations and NLopt for minimization of objective function. 
 <br><br>
 Numerical simulations are decoupled from the optimization by a response surface that approximates the target values as algebraic functions of normalized reaction rate constants. As opposed to the factorial design approach, a sensitivity based method adopted here (Davis et al. 2004). It generates a response surface with fewer computations, but with comparable accuracy. Finally, the minimization is carried out on an objective function indicative of the error between calculated and observed target values. To demonstrate the applicability of this tool, a reaction mechanism for n-heptane is considered.
 <br><br>
@@ -1174,7 +1180,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 
 
 <div id="flip1">
-	<li> Shanmugasundaram Dakshnamurthy, Denis A. Knyazkov, Artem M.
+	<li id="publ-mma"> Shanmugasundaram Dakshnamurthy, Denis A. Knyazkov, Artem M.
 Dmitriev, Oleg P. Korobeinichev, Elna J.K. Nilsson, Alexander A.
 Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic model for high temperature oxidation of methyl methacrylate", Combustion Science and Technology (in press)
 </div>
@@ -1208,7 +1214,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 
 
 <div id="flip7">
-	<li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate", Combustion and Flame, 197, 49-64, 2018
+	<li id="publ-mb1"> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate", Combustion and Flame, 197, 49-64, 2018
 </div>
 <div id="panel7">
 	<ul style="list-style-type:square">
@@ -1228,7 +1234,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <br>
 
 <div id="flip6">
-	<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study", Combustion and Flame, 196, 116-128, 2018
+	<li id="publ-dme1"> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study", Combustion and Flame, 196, 116-128, 2018
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
