--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 
 <table border="0" cellspacing="1" cellpadding="5" width="100%">
 <tr>
-	<td width="25%" id="people-dummy"></td>
+	<td width="12.5%" id="people-dummy"></td>
 	<td width="25%" id="people-sanjay">
 	<center>
 			 <div class="tooltip">	<img src="./images/Sanjay.jpg" width="150">	
@@ -1009,6 +1009,22 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 </span>
 				 </div>
 	 </center>
+  	</td>
+  <td width="25%" id="people-srinu">	
+  	<center>
+  	 <div class="tooltip">	<img  
+   src="./images/Srinu.jpg" width="150">	
+  <h4>Srinu Naik<br>
+  			 M. Tech 2016--18,  <a href="#mech_opt" onclick="openCity(event, 'Current_Research')">Research</a></h4>
+  		  <span class="tooltiptext">
+  			 <p class=card><i>Project:</i> Development of the heat flux method for measuring burning velocities </p> 
+			 <p class=card><i>Co-advisor:</i> <a href="https://mech.iitm.ac.in/meiitm/personnal/dr-s-varunkumar/">Dr. Varunkumar S.</a> </p>
+  			 						 <p class=card><i>Currently:</i> </p>
+  			  <!--Vaisakh obtained his B. Tech in Mechanical Engineering from NSS College of Engineering Palakkad in 2014. He received his M. Tech in Thermal Engineering at IIT Madras in 2017. His project focused on reaction mechanism optimization. He is currently working as a postgraduate engineer at <a href="https://www.linkedin.com/company/lennox_india_technology_centre?trk=ppro_cprof" target="_blank">Lennox India Technology Centre</a>, Chennai.</p> -->
+  </span>
+  	 </div>
+  	 </center>
+    </td>
 	</td>
 <td width="25%" id="people-vaisakh">	
 	<center>
@@ -1024,7 +1040,8 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 	 </div>
 	 </center>
   </td>
-	<td width="25%" id="people-dummy"></td>
+ 
+	<td width="12.5%" id="people-dummy"></td>
 </tr>
 </table>
 
