m.tech project description

--- a/index.html
+++ b/index.html
@@ -1438,8 +1438,9 @@ For a Masters thesis*
 <tr><td>
 For an M. Tech project*
 <ul>
-	<li> Automatic reaction mechanism generation
-	<li> Thermodynamic property estimation for cyclic species
+	<li> Automatic reaction mechanism generation</li>
+	<li> Thermodynamic property estimation for cyclic species</li>
+	<li> <a href="project_writeup/Importance_of_kinetics_in_realistic_simulations.html" target="_blank"> Evaluating the effect of accuracy of kinetic models in realistic simulations</li>
 </ul>
 
 </td>
