m.tech project description

--- a/index.html
+++ b/index.html
@@ -374,15 +374,14 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </tr>
 </table>
 
-<!-- <br>
+<br>
 <table border="1" cellspacing="2" cellpadding="5" width="100%">
 <tr>
 	<td width="100%">
-<h2>Position open for a project assistant to <a href=project_writeup/Reduced_Reaction_Models_For_Combustion.html>implement algorithms for mechanism reduction</a> </h2>
-</td>
+<center><h2>Position open for a project assistant to study the <br><a href=project_writeup/Importance_of_kinetics_in_realistic_simulations.html><i>Importance of kinetics in realistic simulations</i></a> </h2> </center>
+<!-- <center><h2> <a href="#" onclick="openCity(event, 'Available_Projects')"><i>Possible M. Tech/DD projects 2019</i></center></a></h2> -->
 </tr>
 </table>
- -->
 
 <!-- <h2> <a href="project_writeup/MS_PhD_Winter_2018.html" target="_blank"> <center><i>Abstracts for topics floated for MS admissions (Winter 2018)</i></center></a></h2> -->
 <!--<h2> <a href="project_writeup/MTech_DD_2017.html" target="_blank"> <center><i>Possible M. Tech/DD projects</i></center></a></h2>-->
