--- a/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
+++ b/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
@@ -18,7 +18,7 @@ h4   {color: lightblue;}
 </head>
 
 <body bgcolor = "black">
-<center> <h1>Evaluating the effect of accuracy of kinetic models in realistic simulations<</h1> </center>	
+<center> <h1>Evaluating the effect of accuracy of kinetic models in realistic simulations</h1> </center>	
 <h2>Abstract</h2>
 
 Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. The question however that is not addressed is how compact a mechanism is correct for the objective of interest. Normally, reduced mechanisms are obtained by preserving certain combustion targets, but what are the ramifications when running them through a realistic computation? Simply put, is the reduced mechanism when run through complex calculations yielding accurate results? To what degree?
@@ -33,4 +33,16 @@ Penchant to pick up computation fundaes and interest in combustion
 <!-- http://web.stanford.edu/group/pitsch/publication/PepiotJMUSSCI2005.pdf -->
 <!-- http://www.tandfonline.com/doi/abs/10.1080/13647830802245177 -->
 
+<h2>Additional details</h2>
+
+<b>Position:</b> Project assistant <br>
+
+<b>Duration:</b> 1 year <br>
+
+<b>Salary:</b> As per institute norms <br>
+
+<b>Selection procedure:</b> Personal interview. <br><br>
+
+If interested, write to me with a subject line that includes the title of the topic and your CV. If your application is found suitable, you will receive an intimation for a personal interview. 
+  
 </body></html>
